sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value ecart
   		ecart = (ecart.toDouble / 1.3).toInt;
                ^