sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
   var x=getNombreValeurs(); var y =true;
   while ( x>1 || y) {
   	if (x>1) {
   		ecart = (ecart.toDouble / 1.3).toInt;
   	}
   	var i=0;
   	while (i+x < getNombreValeurs()) {
   		if (plusPetit(i+1,i)) {
   			echange(i,i+1);
   		}
   		i +=1;
   	}
   }
   
}

